# Med-Agent

./: .env.example  .gitignore  ACCURACY_VALIDATION.md  AMG_RAG_START.md  ARCHITECTURE_DIAGRAMS.md  COMPETITION_WRITEUP.md  DATABASE_SCALING.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  FILE_STRUCTURE.md  LICENSE  MULTIMODAL.md  PRODUCTION_BEST_PRACTICES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README.old.md  README.opensource.md  RESEARCH_INTEGRATION.md  RURAL_DEPLOYMENT.md  SARACODER_OPTIMIZATION.md  SETUP.md  SOPHISTICATED_FEATURES.md  VIDEO_SCRIPT.md  WRITEUP.md  api.py  app.py  config.py  config_production.py  config_rural.py  demo_interface.py  docker-compose.yml  example_multimodal.py  example_saracoder_optimization.py  example_usage.py  examples.py  pyproject.toml  requirements.txt  run_agent.py  (+9 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MCP_ARCHITECTURE.md  REFACTORING.md  SETUP.md
examples/: __init__.py  demo_agentic.py  demo_amg_rag.py  demo_mcp.py  demo_multimodal.py  demo_multimodal_api.py  rural_clinic_demo.py  test_components.py  test_ingestion.py
k8s/: deployment.yaml
medassist/: __init__.py  adaptive_models.py  agentic_orchestrator.py  agentic_workflow.py  amg_rag.py  base_agent.py  cloud_services.py  confidence_aggregator.py  config.py  db_optimization.py  deep_confidence.py  error_handling.py  exceptions.py  graph_retrieval.py  health.py  health_checks.py  hybrid_orchestrator.py  ingestion_pipeline.py  knowledge_graph.py  knowledge_sync.py  logging_setup.py  logging_utils.py  mcp_client.py  mcp_server.py  medical_image_search.py  medical_ner.py  monitoring.py  multimodal.py  multimodal_models.py  offline_rag.py  orchestrator.py  pubmed_retrieval.py  reasoning_engine.py  semantic_router.py  specialized_agents.py  tools.py
scripts/: update_imports.py
tests/: __init__.py  (+5 more)
(+25 files in other folders)
