[project]
name = "medassist"
version = "1.0.0"
description = "Sophisticated Agentic Medical Workflow System for Kaggle Med-Gemma Impact Challenge"
authors = [
    {name = "Quan", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    # Core ML Libraries
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0",
    
    # Web Interface
    "gradio>=4.0.0",
    
    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    
    # Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    
    # Embeddings (for semantic similarity in routing)
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/MedGemma-Agentic-Workflow"
Repository = "https://github.com/YOUR_USERNAME/MedGemma-Agentic-Workflow"
Documentation = "https://github.com/YOUR_USERNAME/MedGemma-Agentic-Workflow#readme"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
